fixed the bug with copying on mobile

--- a/src/App/components/UI/Button/Button.module.scss
+++ b/src/App/components/UI/Button/Button.module.scss
@@ -23,7 +23,7 @@
   }
 
   &:active {
-    transform: scale(0.8);
+    transform: scale(0.95);
   }
 }
 
