--- a/src/App/components/elements/BrandedLinks/BrandedLinks.module.scss
+++ b/src/App/components/elements/BrandedLinks/BrandedLinks.module.scss
@@ -35,6 +35,13 @@
   line-height: 1.5;
 }
 
+@media (min-width: 600px) {
+  .right {
+    img {
+      width: 60%;
+    }
+  }
+}
 @media (min-width: 1024px) {
   .left {
     width: 55%;
